--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -22,7 +22,7 @@ $wide: 1025px;
 ///            COLOURS
 /////////////////////////////////////////
 
-// Primary UCLA Colour
+// Primary UCLA Colours
 
 $uclablue: #3399cc;
 $uclasafeblue: #347bad;
@@ -40,6 +40,7 @@ $uclagreenneon: #00ff87;
 $uclapinkneon: #ff00a5;
 $uclaliteblueneon: #00ffff;
 $uclapurpleneon: #8237ff;
+$uclagrey: #666;
 
 // SSO Colours
 
@@ -71,6 +72,8 @@ $h4-font-size: 1.125em;
 
 $p-font-size: 1em;
 $meta-font-size: .75em;
+
+$base-line-height: 1.375em;
 
 $half-spacing: .5em;
 $default-spacing: 1em;
