test for gh-pages display

--- a/_scss/_ucla-styles.scss
+++ b/_scss/_ucla-styles.scss
@@ -3,7 +3,7 @@
 /////////////////////////////////////////
 
 html {
-	background: #d1e8f8 url('/images/background.jpg');
+	background: #d1e8f8 url('../images/background.jpg');
 	box-sizing: border-box;
 	position: relative; 
 	min-height: 100%;
