--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -2,6 +2,6 @@
 	<p class="footer-meta-info"><a href="policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: Mon, 03 Nov 2014 23:00:19 -0800</p> <p class="footer-non-human"><a href="#">ROBO</a></p>
 </footer>
 
-<script src="/js/jquery.min.js"></script>
-<script src="/js/placeholdr.js"></script>
-<script src="/js/iamucla-sso.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/placeholdr.js"></script>
+<script src="../js/iamucla-sso.js"></script>
