play well with gh-pages

--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -15,7 +15,7 @@
 	</fieldset>
 
 	<fieldset class="sso-submit">
-		<button class="primary" type="submit">Sign In</button>
+		<button class="primary" type="submit" name="sso">Sign In</button>
 	</fieldset>
 	
 	<ul class="sso-links">
