--- a/_includes/ucla-header.html
+++ b/_includes/ucla-header.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>UCLA Logon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../css/ucla-logon.css">
-	<script src="../js/modernizr.custom.20284.js"></script>
+	<link rel="stylesheet" href="{{ site.url }}/css/ucla-logon.css">
+	<script src="{{ site.url }}/js/modernizr.custom.20284.js"></script>
 </head>
 
 <body>
 
 	<header role="banner">
-		<h1><img src="../images/logo.png" alt="UCLA Logon"></h1>
+		<h1><img src="{{ site.url }}/images/logo.png" alt="UCLA Logon"></h1>
 	</header>
