--- a/_scss/_ucla-styles.scss
+++ b/_scss/_ucla-styles.scss
@@ -26,6 +26,22 @@ h1, h2, h3, h4 {
 	color: $uclasafeblue;	
 }
 
+h1 {
+	font-size: $h1-font-size;
+}
+
+h2 {
+	font-size: $h2-font-size;
+}
+
+h3 {
+	font-size: $h3-font-size;
+}
+
+h4 {
+	font-size: $h4-font-size;
+}
+
 p {
 	line-height: $base-line-height;
 }
