--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -2,6 +2,6 @@
 	<p class="footer-meta-info"><a href="policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: {{ site.time }}</p> <p class="footer-non-human"><a href="#">NH</a></p>
 </footer>
 
-<script src="{{ site.url }}/js/jquery.min.js"></script>
-<script src="{{ site.url }}/js/placeholdr.js"></script>
-<script src="{{ site.url }}/js/iamucla-sso.js"></script>
+<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/js/placeholdr.js"></script>
+<script src="{{ site.baseurl }}/js/iamucla-sso.js"></script>
