more error stuff + some variable/structure abstraction

--- a/_includes/ucla-sso-form-disabled.html
+++ b/_includes/ucla-sso-form-disabled.html
@@ -5,17 +5,17 @@
 		<ol>
 			<li>
 				<label for="logon">Account ID</label>
-				<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" required autofocus>
+				<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" required autofocus disabled>
 			</li>
 			<li>
 				<label for="pass">Password</label>
-				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon Password" aria-required="true" required>
+				<input id="pass" "pass" type="text" placeholder="Your UCLA Logon Password" aria-required="true" required disabled>
 			</li>
 		</ol>
 	</fieldset>
 
 	<fieldset class="sso-submit">
-		<button class="primary" type="submit" name="sso">Sign In</button>
+		<button class="primary" type="submit" name="sso" disabled>Sign In</button>
 	</fieldset>
 	
 	<ul class="sso-links">
