--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -54,7 +54,8 @@ $secondary-color: $uclagold;
 $warning-color: $ucladarkblue;
 $warning-bg-color: $uclayellowneon;
 $error-color: $uclapinkneon;
-$error-bg-color: darken($uclapinkneon, 42%);
+$error-bg-color: darken($uclapinkneon, 45%);
+$error-bg-color-alt: darken($uclapinkneon, 41%);
 $bullet-color: $uclagreenneon;
 $footer-link-color: $white;
 $footer-link-color-hover: $uclayellowneon;
