--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -167,25 +167,18 @@ body {
   font-size: 100%;
 }
 
+/*
 @font-face {
-  font-family: '../fonts/ProximaNova';
-  src: url("../fonts/ProximaNova-Light.eot");
-  src: url("../fonts/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
+	font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Light.eot');src: url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Light.woff') format('woff'),url('../fonts/ProximaNova-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
 }
+*/
 @font-face {
   font-family: '../fonts/ProximaNova';
   src: url("../fonts/ProximaNova-Regular.eot");
   src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
   font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: '../fonts/ProximaNova';
-  src: url("../fonts/ProximaNova-Semibold.eot");
-  src: url("../fonts/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Semibold.woff") format("woff"), url("../fonts/ProximaNova-Semibold.ttf") format("truetype");
-  font-weight: 600;
   font-style: normal;
 }
 /* line 5, ../_scss/_ucla-styles.scss */
@@ -222,26 +215,31 @@ h1 {
 }
 
 /* line 33, ../_scss/_ucla-styles.scss */
+div h1, article h1 {
+  margin: 0;
+}
+
+/* line 37, ../_scss/_ucla-styles.scss */
 h2 {
   font-size: 1.5em;
 }
 
-/* line 37, ../_scss/_ucla-styles.scss */
+/* line 41, ../_scss/_ucla-styles.scss */
 h3 {
   font-size: 1.25em;
 }
 
-/* line 41, ../_scss/_ucla-styles.scss */
+/* line 45, ../_scss/_ucla-styles.scss */
 h4 {
   font-size: 1.125em;
 }
 
-/* line 45, ../_scss/_ucla-styles.scss */
+/* line 49, ../_scss/_ucla-styles.scss */
 p {
   line-height: 1.375em;
 }
 
-/* line 49, ../_scss/_ucla-styles.scss */
+/* line 53, ../_scss/_ucla-styles.scss */
 a {
   color: #8237ff;
   text-decoration: underline;
@@ -254,35 +252,35 @@ a {
   -webkit-transition-duration: 0.15s;
   transition-duration: 0.15s;
 }
-/* line 54, ../_scss/_ucla-styles.scss */
+/* line 58, ../_scss/_ucla-styles.scss */
 a:visited {
   color: #8237ff;
 }
-/* line 57, ../_scss/_ucla-styles.scss */
+/* line 61, ../_scss/_ucla-styles.scss */
 a:hover, a:focus {
   text-decoration: underline;
   color: #1e4b87;
   outline: 0;
 }
-/* line 62, ../_scss/_ucla-styles.scss */
+/* line 66, ../_scss/_ucla-styles.scss */
 a:focus {
   outline: thin dotted;
 }
-/* line 65, ../_scss/_ucla-styles.scss */
+/* line 69, ../_scss/_ucla-styles.scss */
 a:active {
   outline: 0;
 }
 
-/* line 70, ../_scss/_ucla-styles.scss */
+/* line 74, ../_scss/_ucla-styles.scss */
 section[role="main"] ul {
   list-style: none;
   padding-left: 1.5em;
 }
-/* line 73, ../_scss/_ucla-styles.scss */
+/* line 77, ../_scss/_ucla-styles.scss */
 section[role="main"] ul li {
   margin-bottom: .5em;
 }
-/* line 76, ../_scss/_ucla-styles.scss */
+/* line 80, ../_scss/_ucla-styles.scss */
 section[role="main"] ul li:before {
   color: #00ff87;
   content: "•";
@@ -291,7 +289,7 @@ section[role="main"] ul li:before {
   left: -.25em;
 }
 
-/* line 89, ../_scss/_ucla-styles.scss */
+/* line 93, ../_scss/_ucla-styles.scss */
 input {
   width: 20em;
   font-size: 1.125em;
@@ -301,7 +299,7 @@ input {
   border-radius: 3px;
 }
 
-/* line 96, ../_scss/_ucla-styles.scss */
+/* line 100, ../_scss/_ucla-styles.scss */
 select, input {
   padding: 0.5em 0.6em;
   display: inline-block;
@@ -310,7 +308,7 @@ select, input {
   border-radius: 3px;
 }
 
-/* line 104, ../_scss/_ucla-styles.scss */
+/* line 108, ../_scss/_ucla-styles.scss */
 select:focus {
   outline: 0;
   outline: thin dotted \9;
@@ -318,40 +316,40 @@ select:focus {
   border-color: #00a5e5;
 }
 
-/* line 110, ../_scss/_ucla-styles.scss */
+/* line 114, ../_scss/_ucla-styles.scss */
 select[disabled], input[disabled] {
   cursor: not-allowed !important;
   background-color: #eaeded;
   color: #cad2d3;
 }
 
-/* line 116, ../_scss/_ucla-styles.scss */
+/* line 120, ../_scss/_ucla-styles.scss */
 input:focus:invalid,
 select:focus:invalid {
   color: #b94a48;
   border-color: #ee5f5b;
 }
 
-/* line 122, ../_scss/_ucla-styles.scss */
+/* line 126, ../_scss/_ucla-styles.scss */
 input:focus:invalid:focus,
 select:focus:invalid:focus {
   border-color: #e9322d;
 }
 
-/* line 127, ../_scss/_ucla-styles.scss */
+/* line 131, ../_scss/_ucla-styles.scss */
 select {
   border: 1px solid #ccc;
   background-color: #fff;
 }
 
-/* line 132, ../_scss/_ucla-styles.scss */
+/* line 136, ../_scss/_ucla-styles.scss */
 fieldset {
   margin: 0;
   padding: 0.5em 0;
   border: 0;
 }
 
-/* line 138, ../_scss/_ucla-styles.scss */
+/* line 142, ../_scss/_ucla-styles.scss */
 legend {
   display: block;
   width: 100%;
@@ -364,7 +362,7 @@ legend {
   font-size: 1.5em;
 }
 
-/* line 150, ../_scss/_ucla-styles.scss */
+/* line 154, ../_scss/_ucla-styles.scss */
 button, .button {
   display: inline-block;
   *display: inline;
@@ -402,23 +400,23 @@ button, .button {
 }
 
 /* Firefox: Get rid of the inner focus border */
-/* line 180, ../_scss/_ucla-styles.scss */
+/* line 184, ../_scss/_ucla-styles.scss */
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
 
-/* line 185, ../_scss/_ucla-styles.scss */
+/* line 189, ../_scss/_ucla-styles.scss */
 button:focus {
   outline: 0;
 }
 
-/* line 189, ../_scss/_ucla-styles.scss */
+/* line 193, ../_scss/_ucla-styles.scss */
 button:active {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
 }
 
-/* line 193, ../_scss/_ucla-styles.scss */
+/* line 197, ../_scss/_ucla-styles.scss */
 button[disabled] {
   border: none;
   background-image: none;
@@ -431,43 +429,43 @@ button[disabled] {
   box-shadow: none;
 }
 
-/* line 205, ../_scss/_ucla-styles.scss */
+/* line 209, ../_scss/_ucla-styles.scss */
 button.primary {
   background-color: #347bad;
   color: #fff;
   font-size: 1.125em;
 }
-/* line 209, ../_scss/_ucla-styles.scss */
+/* line 213, ../_scss/_ucla-styles.scss */
 button.primary:hover {
   background-color: #ffe800;
   color: #347bad;
 }
 
-/* line 215, ../_scss/_ucla-styles.scss */
+/* line 219, ../_scss/_ucla-styles.scss */
 .secondary-button {
   background-color: #526991;
   color: #fff;
   margin-top: 1em;
   width: 100%;
 }
-/* line 220, ../_scss/_ucla-styles.scss */
+/* line 224, ../_scss/_ucla-styles.scss */
 .secondary-button:hover {
   background-color: #405170;
   color: #fff;
 }
 
-/* line 231, ../_scss/_ucla-styles.scss */
+/* line 235, ../_scss/_ucla-styles.scss */
 header[role="banner"] img {
   width: 40%;
-  margin-top: .5em;
-}
-
-/* line 237, ../_scss/_ucla-styles.scss */
-section[role="main"] {
-  margin-bottom: 1em;
+  margin-top: 0.5em;
 }
 
 /* line 241, ../_scss/_ucla-styles.scss */
+section[role="main"] {
+  margin-bottom: 4em;
+}
+
+/* line 245, ../_scss/_ucla-styles.scss */
 footer[role="contentinfo"] {
   position: absolute;
   bottom: 0;
@@ -479,66 +477,82 @@ footer[role="contentinfo"] {
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 251, ../_scss/_ucla-styles.scss */
+/* line 255, ../_scss/_ucla-styles.scss */
 footer[role="contentinfo"] p {
   margin: 0;
   font-size: 0.75em;
 }
-/* line 255, ../_scss/_ucla-styles.scss */
+/* line 259, ../_scss/_ucla-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 258, ../_scss/_ucla-styles.scss */
+/* line 262, ../_scss/_ucla-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 261, ../_scss/_ucla-styles.scss */
+/* line 265, ../_scss/_ucla-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 268, ../_scss/_ucla-styles.scss */
+/* line 272, ../_scss/_ucla-styles.scss */
 .footer-meta-info {
   float: left;
 }
 
-/* line 272, ../_scss/_ucla-styles.scss */
+/* line 276, ../_scss/_ucla-styles.scss */
 .footer-non-human {
   float: right;
 }
 
-/* line 276, ../_scss/_ucla-styles.scss */
+/* line 280, ../_scss/_ucla-styles.scss */
 article {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
   padding: 1em;
 }
 
-/* line 282, ../_scss/_ucla-styles.scss */
+/* line 286, ../_scss/_ucla-styles.scss */
 #sso {
   overflow: hidden;
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
   padding: 1em;
 }
-/* line 287, ../_scss/_ucla-styles.scss */
+/* line 291, ../_scss/_ucla-styles.scss */
 #sso label {
   display: none;
 }
-/* line 290, ../_scss/_ucla-styles.scss */
+/* line 294, ../_scss/_ucla-styles.scss */
 #sso fieldset {
   border: none;
 }
-/* line 293, ../_scss/_ucla-styles.scss */
+/* line 297, ../_scss/_ucla-styles.scss */
 #sso ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 300, ../_scss/_ucla-styles.scss */
+/* line 304, ../_scss/_ucla-styles.scss */
+#report {
+  overflow: hidden;
+}
+/* line 306, ../_scss/_ucla-styles.scss */
+#report label {
+  display: block;
+  margin-bottom: 0.25em;
+}
+/* line 310, ../_scss/_ucla-styles.scss */
+#report ol {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+/* line 317, ../_scss/_ucla-styles.scss */
 .sso-submit {
   width: 100%;
   clear: right;
@@ -547,7 +561,7 @@ article {
   padding-top: 0;
 }
 @media (min-width: 321px) {
-  /* line 300, ../_scss/_ucla-styles.scss */
+  /* line 317, ../_scss/_ucla-styles.scss */
   .sso-submit {
     width: 23.25581%;
     clear: right;
@@ -557,7 +571,7 @@ article {
   }
 }
 
-/* line 308, ../_scss/_ucla-styles.scss */
+/* line 325, ../_scss/_ucla-styles.scss */
 .sso-links {
   width: 100%;
   clear: right;
@@ -569,7 +583,7 @@ article {
   margin: 0;
 }
 @media (min-width: 321px) {
-  /* line 308, ../_scss/_ucla-styles.scss */
+  /* line 325, ../_scss/_ucla-styles.scss */
   .sso-links {
     width: 74.4186%;
     clear: right;
@@ -577,12 +591,12 @@ article {
     margin-right: 0;
   }
 }
-/* line 316, ../_scss/_ucla-styles.scss */
+/* line 333, ../_scss/_ucla-styles.scss */
 .sso-links li {
   margin-bottom: 0;
 }
 
-/* line 321, ../_scss/_ucla-styles.scss */
+/* line 338, ../_scss/_ucla-styles.scss */
 .sp-news {
   background: rgba(204, 204, 204, 0.2);
   padding: 0.5em;
@@ -591,16 +605,16 @@ article {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 326, ../_scss/_ucla-styles.scss */
+/* line 343, ../_scss/_ucla-styles.scss */
 .sp-news p {
   font-size: 0.75em;
 }
-/* line 329, ../_scss/_ucla-styles.scss */
+/* line 346, ../_scss/_ucla-styles.scss */
 .sp-news h3 {
   margin-top: 0;
 }
 
-/* line 334, ../_scss/_ucla-styles.scss */
+/* line 351, ../_scss/_ucla-styles.scss */
 div[role="alert"] {
   background: repeating-linear-gradient(45deg, #1a0010, #1a0010 0.5em, #2e001e 0.5em, #2e001e 1em);
   color: #ff00a5;
@@ -610,13 +624,12 @@ div[role="alert"] {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 340, ../_scss/_ucla-styles.scss */
+/* line 357, ../_scss/_ucla-styles.scss */
 div[role="alert"] h1 {
   color: #ff00a5;
-  margin: 0;
 }
 
-/* line 346, ../_scss/_ucla-styles.scss */
+/* line 362, ../_scss/_ucla-styles.scss */
 .warning {
   background: #ffff00;
   color: #0055a6;
@@ -626,7 +639,7 @@ div[role="alert"] h1 {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 352, ../_scss/_ucla-styles.scss */
+/* line 368, ../_scss/_ucla-styles.scss */
 .warning h1 {
   color: #0055a6;
   margin: 0;
