--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -50,13 +50,13 @@ $white: #fff;
 $black: #000;
 
 $primary-color: $uclasafeblue;
-$primary-color-alternate-state: $uclasafeblue;
+$primary-color-alternate-state: $ucladarkblue;
 $secondary-color: $uclagold;
 $warning-color: $ucladarkblue;
 $warning-bg-color: $uclayellowneon;
 $error-color: $uclapinkneon;
-$error-bg-color: darken($uclapinkneon, 45%);
-$error-bg-color-alt: darken($uclapinkneon, 41%);
+$error-bg-color: darken($uclapinkneon, 48%);
+$error-bg-color-alt: darken($uclapinkneon, 43%);
 $bullet-color: $uclagreenneon;
 $footer-link-color: $white;
 $footer-link-color-hover: $uclayellowneon;
