--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -300,7 +300,7 @@ input {
 }
 
 /* line 100, ../_scss/_ucla-styles.scss */
-select, input {
+select, input, textarea {
   padding: 0.5em 0.6em;
   display: inline-block;
   border: 1px solid #ccc;
@@ -309,7 +309,7 @@ select, input {
 }
 
 /* line 108, ../_scss/_ucla-styles.scss */
-select:focus {
+select:focus, input:focus, textarea:focus {
   outline: 0;
   outline: thin dotted \9;
   /* IE6-9 */
@@ -438,7 +438,7 @@ button.primary {
 /* line 213, ../_scss/_ucla-styles.scss */
 button.primary:hover {
   background-color: #ffe800;
-  color: #347bad;
+  color: #0055a6;
 }
 
 /* line 219, ../_scss/_ucla-styles.scss */
@@ -472,8 +472,8 @@ footer[role="contentinfo"] {
   height: 2em;
   width: 100%;
   max-width: 36em;
-  background: #347bad;
-  border-top: 1px solid #1c435f;
+  background: #0055a6;
+  border-top: 1px solid #002140;
   padding: 0.5em;
   color: #cccccc;
 }
@@ -617,32 +617,32 @@ article {
 }
 
 /* line 351, ../_scss/_ucla-styles.scss */
-div[role="alert"] {
-  background: repeating-linear-gradient(45deg, #1a0010, #1a0010 0.5em, #2e001e 0.5em, #2e001e 1em);
+.error {
+  background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
   color: #ff00a5;
-  padding: 0.5em;
+  padding: 1em;
   margin-bottom: 1em;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
 /* line 357, ../_scss/_ucla-styles.scss */
-div[role="alert"] h1 {
+.error h1 {
   color: #ff00a5;
 }
 
 /* line 362, ../_scss/_ucla-styles.scss */
-.warning {
+.alert {
   background: #ffff00;
   color: #0055a6;
-  padding: 0.5em;
+  padding: 1em;
   margin-bottom: 1em;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
 /* line 368, ../_scss/_ucla-styles.scss */
-.warning h1 {
+.alert h1 {
   color: #0055a6;
   margin: 0;
 }
