basic error codes, more structural tweaks

--- a/_includes/fatal-report-form.html
+++ b/_includes/fatal-report-form.html
@@ -19,7 +19,7 @@
 	</fieldset>
 
 	<fieldset class="report-submit">
-		<button class="primary" type="submit" name="report">Send Report</button>
+		<button class="primary-button" type="submit" name="report">Send Report</button>
 	</fieldset>
 	
 </form>
