--- a/_includes/ucla-sso-form-disabled.html
+++ b/_includes/ucla-sso-form-disabled.html
@@ -15,7 +15,7 @@
 	</fieldset>
 
 	<fieldset class="sso-submit">
-		<button class="primary" type="submit" name="sso" disabled>Sign In</button>
+		<button class="primary-button" type="submit" name="sso" disabled>Sign In</button>
 	</fieldset>
 	
 	<ul class="sso-links">
