--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -2,15 +2,16 @@
 @import 'singularitygs';
 @import 'breakpoint';
 @import 'compass/css3';
+@import 'compass/utilities/general/clearfix';
 
 // normalize components, see https://github.com/ksmandersen/compass-normalize
 @import 'normalize-version';
 @import 'normalize/html5';
 @import 'normalize/base';
 @import 'normalize/links';
-@import 'normalize/typography';
 @import 'normalize/forms';
 
 // custom styles
-@import "med-vars";
-@import "med-styles";
+@import 'med-vars';
+@import 'pure-forms';
+@import 'sso-styles';
