--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -181,115 +181,7 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-/* line 5, ../_scss/_ucla-styles.scss */
-html {
-  background: #d1e8f8 url("../images/background.jpg");
-  box-sizing: border-box;
-  position: relative;
-  min-height: 100%;
-  width: 100%;
-}
-
-/* line 13, ../_scss/_ucla-styles.scss */
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-/* line 17, ../_scss/_ucla-styles.scss */
-body {
-  max-width: 36em;
-  margin: 0 auto;
-  color: #666;
-  font-family: ProximaNova, Verdana, sans-serif;
-}
-
-/* line 24, ../_scss/_ucla-styles.scss */
-h1, h2, h3, h4 {
-  font-weight: normal;
-  color: #347bad;
-}
-
-/* line 29, ../_scss/_ucla-styles.scss */
-h1 {
-  font-size: 2em;
-}
-
-/* line 33, ../_scss/_ucla-styles.scss */
-div h1, article h1 {
-  margin: 0;
-}
-
-/* line 37, ../_scss/_ucla-styles.scss */
-h2 {
-  font-size: 1.5em;
-}
-
-/* line 41, ../_scss/_ucla-styles.scss */
-h3 {
-  font-size: 1.25em;
-}
-
-/* line 45, ../_scss/_ucla-styles.scss */
-h4 {
-  font-size: 1.125em;
-}
-
-/* line 49, ../_scss/_ucla-styles.scss */
-p {
-  line-height: 1.375em;
-}
-
-/* line 53, ../_scss/_ucla-styles.scss */
-a {
-  color: #8237ff;
-  text-decoration: underline;
-  -moz-transition-property: color;
-  -o-transition-property: color;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -moz-transition-duration: 0.15s;
-  -o-transition-duration: 0.15s;
-  -webkit-transition-duration: 0.15s;
-  transition-duration: 0.15s;
-}
-/* line 58, ../_scss/_ucla-styles.scss */
-a:visited {
-  color: #8237ff;
-}
-/* line 61, ../_scss/_ucla-styles.scss */
-a:hover, a:focus {
-  text-decoration: underline;
-  color: #1e4b87;
-  outline: 0;
-}
-/* line 66, ../_scss/_ucla-styles.scss */
-a:focus {
-  outline: thin dotted;
-}
-/* line 69, ../_scss/_ucla-styles.scss */
-a:active {
-  outline: 0;
-}
-
-/* line 74, ../_scss/_ucla-styles.scss */
-section[role="main"] ul {
-  list-style: none;
-  padding-left: 1.5em;
-}
-/* line 77, ../_scss/_ucla-styles.scss */
-section[role="main"] ul li {
-  margin-bottom: .5em;
-}
-/* line 80, ../_scss/_ucla-styles.scss */
-section[role="main"] ul li:before {
-  color: #00ff87;
-  content: "•";
-  position: relative;
-  font-size: 1.2em;
-  left: -.25em;
-}
-
-/* line 93, ../_scss/_ucla-styles.scss */
+/* line 3, ../_scss/_pure-forms.scss */
 input {
   width: 20em;
   font-size: 1.125em;
@@ -299,7 +191,7 @@ input {
   border-radius: 3px;
 }
 
-/* line 100, ../_scss/_ucla-styles.scss */
+/* line 10, ../_scss/_pure-forms.scss */
 select, input, textarea {
   padding: 0.5em 0.6em;
   display: inline-block;
@@ -308,7 +200,7 @@ select, input, textarea {
   border-radius: 3px;
 }
 
-/* line 108, ../_scss/_ucla-styles.scss */
+/* line 18, ../_scss/_pure-forms.scss */
 select:focus, input:focus, textarea:focus {
   outline: 0;
   outline: thin dotted \9;
@@ -316,40 +208,40 @@ select:focus, input:focus, textarea:focus {
   border-color: #00a5e5;
 }
 
-/* line 114, ../_scss/_ucla-styles.scss */
+/* line 24, ../_scss/_pure-forms.scss */
 select[disabled], input[disabled] {
   cursor: not-allowed !important;
   background-color: #eaeded;
   color: #cad2d3;
 }
 
-/* line 120, ../_scss/_ucla-styles.scss */
+/* line 30, ../_scss/_pure-forms.scss */
 input:focus:invalid,
 select:focus:invalid {
   color: #b94a48;
   border-color: #ee5f5b;
 }
 
-/* line 126, ../_scss/_ucla-styles.scss */
+/* line 36, ../_scss/_pure-forms.scss */
 input:focus:invalid:focus,
 select:focus:invalid:focus {
   border-color: #e9322d;
 }
 
-/* line 131, ../_scss/_ucla-styles.scss */
+/* line 41, ../_scss/_pure-forms.scss */
 select {
   border: 1px solid #ccc;
   background-color: #fff;
 }
 
-/* line 136, ../_scss/_ucla-styles.scss */
+/* line 46, ../_scss/_pure-forms.scss */
 fieldset {
   margin: 0;
   padding: 0.5em 0;
   border: 0;
 }
 
-/* line 142, ../_scss/_ucla-styles.scss */
+/* line 52, ../_scss/_pure-forms.scss */
 legend {
   display: block;
   width: 100%;
@@ -362,7 +254,7 @@ legend {
   font-size: 1.5em;
 }
 
-/* line 154, ../_scss/_ucla-styles.scss */
+/* line 64, ../_scss/_pure-forms.scss */
 button, .button {
   display: inline-block;
   *display: inline;
@@ -400,23 +292,23 @@ button, .button {
 }
 
 /* Firefox: Get rid of the inner focus border */
-/* line 184, ../_scss/_ucla-styles.scss */
+/* line 94, ../_scss/_pure-forms.scss */
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
 
-/* line 189, ../_scss/_ucla-styles.scss */
+/* line 99, ../_scss/_pure-forms.scss */
 button:focus {
   outline: 0;
 }
 
-/* line 193, ../_scss/_ucla-styles.scss */
+/* line 103, ../_scss/_pure-forms.scss */
 button:active {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
 }
 
-/* line 197, ../_scss/_ucla-styles.scss */
+/* line 107, ../_scss/_pure-forms.scss */
 button[disabled] {
   border: none;
   background-image: none;
@@ -429,43 +321,151 @@ button[disabled] {
   box-shadow: none;
 }
 
-/* line 209, ../_scss/_ucla-styles.scss */
-button.primary {
+/* line 119, ../_scss/_pure-forms.scss */
+.primary-button {
   background-color: #347bad;
   color: #fff;
   font-size: 1.125em;
 }
-/* line 213, ../_scss/_ucla-styles.scss */
-button.primary:hover {
+/* line 123, ../_scss/_pure-forms.scss */
+.primary-button:hover {
   background-color: #ffe800;
   color: #0055a6;
 }
 
-/* line 219, ../_scss/_ucla-styles.scss */
+/* line 129, ../_scss/_pure-forms.scss */
 .secondary-button {
   background-color: #526991;
   color: #fff;
   margin-top: 1em;
   width: 100%;
 }
-/* line 224, ../_scss/_ucla-styles.scss */
+/* line 134, ../_scss/_pure-forms.scss */
 .secondary-button:hover {
   background-color: #405170;
   color: #fff;
 }
 
-/* line 235, ../_scss/_ucla-styles.scss */
+/* line 5, ../_scss/_sso-styles.scss */
+html {
+  background: #d1e8f8 url("../images/background.jpg");
+  box-sizing: border-box;
+  position: relative;
+  min-height: 100%;
+  width: 100%;
+}
+
+/* line 13, ../_scss/_sso-styles.scss */
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/* line 17, ../_scss/_sso-styles.scss */
+body {
+  max-width: 36em;
+  margin: 0 auto;
+  color: #666;
+  font-family: ProximaNova, Verdana, sans-serif;
+}
+
+/* line 24, ../_scss/_sso-styles.scss */
+h1, h2, h3, h4 {
+  font-weight: normal;
+  color: #347bad;
+}
+
+/* line 29, ../_scss/_sso-styles.scss */
+h1 {
+  font-size: 2em;
+}
+
+/* line 33, ../_scss/_sso-styles.scss */
+div h1, article h1 {
+  margin: 0;
+}
+
+/* line 37, ../_scss/_sso-styles.scss */
+h2 {
+  font-size: 1.5em;
+}
+
+/* line 41, ../_scss/_sso-styles.scss */
+h3 {
+  font-size: 1.25em;
+}
+
+/* line 45, ../_scss/_sso-styles.scss */
+h4 {
+  font-size: 1.125em;
+}
+
+/* line 49, ../_scss/_sso-styles.scss */
+p {
+  line-height: 1.375em;
+}
+
+/* line 53, ../_scss/_sso-styles.scss */
+a {
+  color: #8237ff;
+  text-decoration: underline;
+  -moz-transition-property: color;
+  -o-transition-property: color;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -moz-transition-duration: 0.15s;
+  -o-transition-duration: 0.15s;
+  -webkit-transition-duration: 0.15s;
+  transition-duration: 0.15s;
+}
+/* line 58, ../_scss/_sso-styles.scss */
+a:visited {
+  color: #8237ff;
+}
+/* line 61, ../_scss/_sso-styles.scss */
+a:hover, a:focus {
+  text-decoration: underline;
+  color: #1e4b87;
+  outline: 0;
+}
+/* line 66, ../_scss/_sso-styles.scss */
+a:focus {
+  outline: thin dotted;
+}
+/* line 69, ../_scss/_sso-styles.scss */
+a:active {
+  outline: 0;
+}
+
+/* line 74, ../_scss/_sso-styles.scss */
+section[role="main"] ul {
+  list-style: none;
+  padding-left: 1.5em;
+}
+/* line 77, ../_scss/_sso-styles.scss */
+section[role="main"] ul li {
+  margin-bottom: .5em;
+}
+/* line 80, ../_scss/_sso-styles.scss */
+section[role="main"] ul li:before {
+  color: #00ff87;
+  content: "•";
+  position: relative;
+  font-size: 1.2em;
+  left: -.25em;
+}
+
+/* line 94, ../_scss/_sso-styles.scss */
 header[role="banner"] img {
   width: 40%;
   margin-top: 0.5em;
 }
 
-/* line 241, ../_scss/_ucla-styles.scss */
+/* line 100, ../_scss/_sso-styles.scss */
 section[role="main"] {
   margin-bottom: 4em;
 }
 
-/* line 245, ../_scss/_ucla-styles.scss */
+/* line 104, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] {
   position: absolute;
   bottom: 0;
@@ -477,82 +477,82 @@ footer[role="contentinfo"] {
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 255, ../_scss/_ucla-styles.scss */
+/* line 114, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   margin: 0;
   font-size: 0.75em;
 }
-/* line 259, ../_scss/_ucla-styles.scss */
+/* line 118, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 262, ../_scss/_ucla-styles.scss */
+/* line 121, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 265, ../_scss/_ucla-styles.scss */
+/* line 124, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 272, ../_scss/_ucla-styles.scss */
+/* line 131, ../_scss/_sso-styles.scss */
 .footer-meta-info {
   float: left;
 }
 
-/* line 276, ../_scss/_ucla-styles.scss */
+/* line 135, ../_scss/_sso-styles.scss */
 .footer-non-human {
   float: right;
 }
 
-/* line 280, ../_scss/_ucla-styles.scss */
+/* line 139, ../_scss/_sso-styles.scss */
 article {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
   padding: 1em;
 }
 
-/* line 286, ../_scss/_ucla-styles.scss */
+/* line 145, ../_scss/_sso-styles.scss */
 #sso {
   overflow: hidden;
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
   padding: 1em;
 }
-/* line 291, ../_scss/_ucla-styles.scss */
+/* line 150, ../_scss/_sso-styles.scss */
 #sso label {
   display: none;
 }
-/* line 294, ../_scss/_ucla-styles.scss */
+/* line 153, ../_scss/_sso-styles.scss */
 #sso fieldset {
   border: none;
 }
-/* line 297, ../_scss/_ucla-styles.scss */
+/* line 156, ../_scss/_sso-styles.scss */
 #sso ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 304, ../_scss/_ucla-styles.scss */
+/* line 163, ../_scss/_sso-styles.scss */
 #report {
   overflow: hidden;
 }
-/* line 306, ../_scss/_ucla-styles.scss */
+/* line 165, ../_scss/_sso-styles.scss */
 #report label {
   display: block;
   margin-bottom: 0.25em;
 }
-/* line 310, ../_scss/_ucla-styles.scss */
+/* line 169, ../_scss/_sso-styles.scss */
 #report ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 317, ../_scss/_ucla-styles.scss */
+/* line 176, ../_scss/_sso-styles.scss */
 .sso-submit {
   width: 430%;
   clear: right;
@@ -562,7 +562,7 @@ article {
   padding-top: 0;
 }
 @media (min-width: 321px) {
-  /* line 317, ../_scss/_ucla-styles.scss */
+  /* line 176, ../_scss/_sso-styles.scss */
   .sso-submit {
     width: 23.25581%;
     clear: right;
@@ -572,7 +572,7 @@ article {
   }
 }
 
-/* line 325, ../_scss/_ucla-styles.scss */
+/* line 184, ../_scss/_sso-styles.scss */
 .sso-links {
   width: 430%;
   clear: right;
@@ -585,7 +585,7 @@ article {
   margin: 0;
 }
 @media (min-width: 321px) {
-  /* line 325, ../_scss/_ucla-styles.scss */
+  /* line 184, ../_scss/_sso-styles.scss */
   .sso-links {
     width: 74.4186%;
     clear: right;
@@ -593,12 +593,12 @@ article {
     margin-right: 0;
   }
 }
-/* line 333, ../_scss/_ucla-styles.scss */
+/* line 192, ../_scss/_sso-styles.scss */
 .sso-links li {
   margin-bottom: 0;
 }
 
-/* line 338, ../_scss/_ucla-styles.scss */
+/* line 197, ../_scss/_sso-styles.scss */
 .sp-news {
   background: rgba(204, 204, 204, 0.2);
   padding: 0.5em;
@@ -607,18 +607,18 @@ article {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 343, ../_scss/_ucla-styles.scss */
+/* line 202, ../_scss/_sso-styles.scss */
 .sp-news p {
   font-size: 0.75em;
 }
-/* line 346, ../_scss/_ucla-styles.scss */
+/* line 205, ../_scss/_sso-styles.scss */
 .sp-news h3 {
   margin-top: 0;
 }
 
-/* line 351, ../_scss/_ucla-styles.scss */
+/* line 210, ../_scss/_sso-styles.scss */
 .error {
-  background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
+  background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #1f0014 0.5em, #1f0014 1em);
   color: #ff00a5;
   padding: 1em;
   margin-bottom: 1em;
@@ -626,12 +626,12 @@ article {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 357, ../_scss/_ucla-styles.scss */
+/* line 216, ../_scss/_sso-styles.scss */
 .error h1 {
   color: #ff00a5;
 }
 
-/* line 362, ../_scss/_ucla-styles.scss */
+/* line 221, ../_scss/_sso-styles.scss */
 .alert {
   background: #ffff00;
   color: #0055a6;
@@ -641,7 +641,7 @@ article {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 368, ../_scss/_ucla-styles.scss */
+/* line 227, ../_scss/_sso-styles.scss */
 .alert h1 {
   color: #0055a6;
   margin: 0;
