fix logo going back to list of pages on gh

--- a/_includes/ucla-header.html
+++ b/_includes/ucla-header.html
@@ -13,5 +13,5 @@
 <body>
 
 	<header role="banner">
-		<h1><a href="/"><img src="{{ site.baseurl }}/images/logo.png" alt="UCLA Sign-On"></a></h1>
+		<h1><a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/images/logo.png" alt="UCLA Sign-On"></a></h1>
 	</header>
