dev font-awesome, logo change

--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -207,6 +207,11 @@ article {
 	}
 }
 
+.loading i {
+	font-size: $h1-font-size;
+	margin: $double-spacing 45%;
+}
+
 .error {
 	background: repeating-linear-gradient(45deg, $error-bg-color, $error-bg-color $half-spacing, $error-bg-color-alt $half-spacing, $error-bg-color-alt $default-spacing);
 	color: $error-color;
