--- a/_includes/ucla-header.html
+++ b/_includes/ucla-header.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>UCLA Logon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/ucla-logon.css">
 	<script src="{{ site.baseurl }}/js/modernizr.custom.20284.js"></script>
 </head>
@@ -13,5 +14,5 @@
 <body>
 
 	<header role="banner">
-		<h1><a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/images/logo.png" alt="UCLA Sign-On"></a></h1>
+		<h1><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="UCLA Sign-On"></a></h1>
 	</header>
