--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,5 +1,5 @@
 <footer role="contentinfo">
-	<p class="footer-meta-info"><a href="policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: {{ site.time }}</p> <p class="footer-non-human"><a href="#">NH</a></p>
+	<p class="footer-meta-info"><a href="policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: {{ site.time }}</p>
 </footer>
 
 <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
