--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -19,8 +19,7 @@
 	</fieldset>
 	
 	<ul class="sso-links">
-		<li><a href="#">Reset your Password</a></li>
-		<li><a href="#">Get a Logon ID</a></li>
+		<li><a href="#">Get help with your password or UCLA logon ID.</a></li>
 	</ul>
 	
 </form>
